# apex-search

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
apexsearch/: __init__.py  search.py
src/: search.py
